<resources>
    <string name="app_name">Raptor</string>

    <!--Login Page-->
    <string name="label_login">Login</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_forgot_your_password">Forgot Your Password?</string>

    <string name="hint_username">Enter User ID…</string>
    <string name="hint_password">Password</string>
    <string name="label_otp_msg">You have requested to reset the password \nfor uername</string>
    <string name="label_submit">Submit</string>
    <string name="label_login_confirmation_msg">By Pressong Okay\n The OTP will e sent to your Coordinator\'s \nRegistered Number</string>
    <string name="label_okay">Okay</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="hint_create_password">Create Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_reset">Reset</string>
    <string name="label_go_back">Go Back</string>
    <string name="label_timer">Timer Comes here…</string>
    <string name="label_submit_otp">Verify Now</string>
    <string name="label_resend_otp">RESEND CODE</string>


    <string-array name="student_dash_items">
        <item>TESTS</item>
        <item>TEST REVIEW</item>
        <item>REPORTS</item>
        <item>TEST PORTION</item>
        <item>ASSIGN TEST</item>
        <item>TEST REVIEW</item>
    </string-array>

    <string-array name="parents_dash_items">
        <item>TESTS</item>
        <item>TEST REVIEW</item>
        <item>REPORTS</item>
        <item>TEST PORTION</item>
        <item>ASSIGN TEST</item>
        <item>TEST REVIEW</item>
    </string-array>

    <string-array name="teacher_dash_items">
        <item>CREATE TEST</item>
        <item>REVIEW TEST</item>
        <item>REPORTS</item>
        <item>ADD TEST PORTION</item>
        <item>ASSIGN TEST</item>
        <item>REVIEW TEST</item>
    </string-array>

    <string-array name="nav_menu_teacher">
        <item>Create tests</item>
        <item>Review Test</item>
        <item>Reports</item>
        <item>Add Test Portion</item>
        <item>Assign Test</item>
        <item>Review Test</item>
        <item>Ask Your Experts</item>
        <item>Notification</item>
        <item>Help Desk</item>
    </string-array>

    <string-array name="nav_menu_students">
        <item>Tests</item>
        <item>Test Review</item>
        <item>Reports</item>
        <item>Test Portion</item>
        <item>Assign Test</item>
        <item>Test Review</item>
        <item>Ask Your Experts</item>
        <item>Notification</item>
        <item>Help Desk</item>
    </string-array>

    <string-array name="nav_menu_parent">
        <item>Tests</item>
        <item>Test Review</item>
        <item>Reports</item>
        <item>Test Portion</item>
        <item>Assign Test</item>
        <item>Test Review</item>
        <item>Ask Your Experts</item>
        <item>Notification</item>
        <item>Help Desk</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="label_ask_experts">Ask experts</string>
    <string name="help_desk">Help Desk</string>
    <string name="ask_your_expert">Ask your Expert</string>

    <string name="hint_enter_your_name">Enter your name …</string>
    <string name="hint_enter_your_email">Enter your email id …</string>
    <string name="hint_enter_your_mobile_number">Enter your mobile number …</string>
    <string name="hint_enter_your_title">Your Title here …</string>
    <string name="hint_enter_your_message">Enter Your message</string>
    <string name="label_choose_file">Choose file</string>
    <string name="label_browse">Browse</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="label_logout">Ready to Leave?</string>
    <string name="label_logout_confirmation">Select \"Logout\" below if you are ready to end your current session.</string>
    <string name="label_logout_btn">LOGOUT</string>
    <string name="introduction">Introduction</string>
    <string name="take_test_info">This section consites of questions obtained from PHYSICS, CHEMISTRY and BIOLOGY subjects from choosen NEET question paper. The question can be categorized into different competency levels  and each competency can be categorized into different complexity levels.
    \n\nYou have to choose  the most appropriate option for the question.
    \n\nThis section consites of questions obtained from PHYSICS, CHEMISTRY and BIOLOGY subjects from choosen NEET question paper. The question can be categorized into different competency levels  and each competency can be categorized into different complexity levels.</string>
    <string name="take_a_test">Take a test</string>
    <string name="full_test">Full test</string>
    <string name="lable_remindme">Remind me</string>


</resources>
