<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_20">

    <TextView
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_logout"
        android:textColor="@color/dark_grey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@color/dark_grey" />

    <TextView
        style="@style/sub_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/label_logout_confirmation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/bg_cancel"
            android:text="CANCEL"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/bg_login_btn"
            android:text="@string/label_logout_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />

    </LinearLayout>

</LinearLayout>