<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:src="@drawable/icn_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_enter_otp" />

        <TextView
            style="@style/sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_timer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.neet.raptor.views.Pinview
                android:id="@+id/pinview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cursorVisible="false"
                app:forceKeyboard="true"
                app:hint="0"
                app:inputType="number"
                app:password="false"
                app:pinBackground="@drawable/sample_background"
                app:pinHeight="40dp"
                app:pinLength="6"
                app:pinWidth="40dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:background="@drawable/bg_login_btn"
                android:gravity="center"
                android:padding="5dp"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/label_submit_otp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_logn_img"
                android:padding="10dp"
                android:src="@drawable/ic_mail"
                android:tint="@color/grey" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_resend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:background="@drawable/bg_login_btn"
                android:gravity="center"
                android:padding="5dp"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/label_resend_otp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_logn_img"
                android:padding="10dp"
                android:src="@drawable/ic_send_message"
                android:tint="@color/grey" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@color/dark_grey" />

    <TextView
        android:id="@+id/txt_back"
        style="@style/sub_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_go_back"
        android:textSize="@dimen/font_16" />

</LinearLayout>